Add book flight methods in swagger
